docs: document vehicle rental app and grading criteria